--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-/node_modules
+/frontend/weather/node_modules
 /.pnp
 .pnp.js
 
@@ -9,7 +9,7 @@
 /coverage
 
 # production
-/build
+/frontend/weather/build
 
 # misc
 .DS_Store
@@ -18,6 +18,9 @@
 .env.test.local
 .env.production.local
 
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+/frontend/weather/npm-debug.log*
+/frontend/weather/yarn-debug.log*
+/frontend/weather/yarn-error.log*
+
+/repository/log
+/data
